--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A small set of RESTful web services using MongoDB and Mongoose. ",
   "main": "lib/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile:run": "tsc && nodemon .",
+    "compile:run:watch": "tsc --watch && nodemon . --watch"
   },
   "repository": {
     "type": "git",
