--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.1",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.3.23",
     "@types/morgan": "^1.7.35"
   }
